--- a/Log in page/index.html
+++ b/Log in page/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="links">
 				<a href="#">Forgot Password ?</a>
-				<a href="#">Sign up</a>
+				<a href="/Sing-up/" target="_blank">Sign up</a>
 			</div>
 			<input type="submit" value="Login">
 		</form>
